--- a/ia.tex
+++ b/ia.tex
@@ -154,27 +154,27 @@ Given the following chemical reaction denoting alcoholic fermentation:
 \begin{equation}
     \ce{A -> 2B + 2C}
 \end{equation}
-Studying the kinetics of this reaction is useful for performing further levels of analysis. Kinetics in chemistry refers to the study of rates of chemical reactions, which is a measurement of the change in concentration of products and reactants over a period of time \parencite{ref}.
+Studying the kinetics of this reaction is useful for predicting its behvaiour. Kinetics in chemistry refers to the study of rates of chemical reactions, which is a measurement of the change in concentration of products and reactants over a period of time \parencite{ref}.
 
 \medskip
 
-The rate of reaction, also known as the reaction velocity $V$ with respect to a compound within the chemical equation is represented as the change in concentration of that compound over the change in time multiplied by the inverse of its stoichiometric coefficient:
+The rate of reaction, also known as the reaction velocity $V$ with respect to a compound within the chemical equation, is represented as the change in concentration of that compound over the change in time multiplied by the inverse of its stoichiometric coefficient:
 \begin{equation}
-    V = \text{rate} = -\frac{d[A]}{dt} = \frac{1}{2}\frac{d[B]}{dt} = \frac{1}{2}\frac{d[C]}{dt}
+    V = \text{rate of reaction} = -\frac{d[A]}{dt} = \frac{1}{2}\frac{d[B]}{dt} = \frac{1}{2}\frac{d[C]}{dt}
 \end{equation}
 
 Additionally, the rate law states how the reaction velocity will be directly proportional to the product of reactants, each reactant raised to a power:
 \begin{equation}
     V = k[A]^m
 \end{equation}
-where $k$ is is the rate constant \parencite{ref} and the sum of the powers denote the order of the reaction. In the case of alcoholic fermentation, the order is purely dependent on $m$.
+Where $k$ is is the rate constant and the sum of the powers denote the order of the reaction. In the case of alcoholic fermentation, the order is purely dependent on $m$ \parencite{ref}.
 
 \medskip
 
 If the order of the reaction is 0, the rate of reaction will not be dependent on the concentration of the reactants, that is $V = k[A]^0 = k$. If the order of the reaction is 1, the rate of reaction will be proportional to the concentration of the reactants, that is $V = k[A]^1 = k[A]$.
 
 \subsection{Michaelis Menten Enzyme Kinetics}
-When reactions are enzyme-catalyzed, enzyme kinetics proves to be a better model at predicting the behvaiour of the reaction. The Michaelis Menten model, proposed by Leonor Michaelis and Maud Menten in 1913 is concerned with $V_0$, the relationship between initial reaction velocity (rate of enzyme catalysis) and the substrate concentration:
+When reactions are enzyme-catalyzed, enzyme kinetics proves to be a better model at predicting the behvaiour of the reaction. The Michaelis Menten model, proposed by Leonor Michaelis and Maud Menten in 1913 is concerned with $V_0$, the relationship between initial reaction velocity (rate of enzyme catalysis) and the substrate concentration \parencite{ref}:
 \begin{equation}
     \ce{E + S <=>[k_1][k_{-1}] ES ->[k_2] E + P}
 \end{equation}
