--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,34 @@
+@article{what-is-yeast,
+    title = {What is Yeast?},
+    year = 2019,
+    url = {https://www.singerinstruments.com/resource/what-is-yeast/},
+    urldate = {2022-03},
+    publisher = {Singer Instruments}
+}
+
+@article{britannica,
+    author = {{The Editors of Encyclopaedia Britannica}},
+    title = {yeast},
+    url = {https://www.britannica.com/science/yeast-fungus},
+    urldate = {2022-03}
+}
+
+@article{masterclass,
+    author = {Apollonia Poilane},
+    title = {How to Activate Yeast {:} When Is it Necessary to Activate Yeast{?}},
+    url = {https://www.masterclass.com/articles/how-to-activate-yeast-explained#how-to-activate-yeast},
+    urldate = {2022-03},
+    year = {2021}
+}
+
+@article{everyday-dishes,
+    year = {2018},
+    author = {Cheryl Najafi},
+    url = {https://everydaydishes.com/simple-food-recipes/how-to-activate-dry-yeast-video/},
+    urldate = {2022-03},
+    title = {How to Activate Dry Yeast}
+}
+
 @misc{ref,
     author = {Author},
     title  = {Title},
