--- a/ia.tex
+++ b/ia.tex
@@ -43,11 +43,11 @@ I have always enjoyed cooking as a mostly self-taught hobby. Having experimented
 \section{Background}
 
 \subsection{What Is Yeast}
-Yeast are single celled, eukaryotic organisms of the fungus kingdom. Like many other life forms, yeast requires food to survive, by converting carbohydrates or saccharides into energy through aerobic or anaerobic respiration \parencite{ref}. Among the many different types of yeast, the one used in this internal assessment is part of the \emph{Saccharomyces cerevisiae} strain - specifically, baker's yeast \parencite{ref}.
+Yeast are single celled, eukaryotic organisms of the fungus kingdom. Like many other life forms, yeast requires food to survive, by converting carbohydrates or saccharides into energy through aerobic or anaerobic respiration \parencite{what-is-yeast}. Among the many different types of yeast, the one used in this internal assessment is part of the \emph{Saccharomyces cerevisiae} strain - specifically, baker's yeast \parencite{britannica}.
 
 \medskip
 
-This internal assessment will focus on the use of active dry yeast, which contain pellets of live yeast cells coated with a layer of dehydrated yeast cells, \parencite{ref} allowing it to stay dormant, giving it a longer shelf life. Hence, active dry yeast must be activated through rehydration in lukewarm water from 37\,\si{\celsius} to 43\,\si{\celsius} (optimal fermentation conditions) for 5 to 10 minutes in a process called proofing, ensuring that the yeast gets dissolved in the water \parencite{ref}.
+This internal assessment will focus on the use of active dry yeast, which contain pellets of live yeast cells coated with a layer of dehydrated yeast cells, \parencite{know-your-yeast} allowing it to stay dormant, giving it a longer shelf life. Hence, active dry yeast must be activated through rehydration in lukewarm water from 37\,\si{\celsius} to 43\,\si{\celsius} (optimal fermentation conditions) for 5 to 10 minutes in a process called proofing, ensuring that the yeast gets dissolved in the water \parencite{masterclass}.
 
 \subsection{Aerobic and Anaerobic Respiration in Yeast}
 It is well known that yeast reacts with glucose to produce ethanol and carbon dioxide. To explore the details of how this works, it is crucial to understand how yeast undergoes both aerobic and anaerobic respiration.
@@ -68,7 +68,7 @@ Aerobic respiration is broken down into 3 steps:
 
 \medskip
 
-However, the focus of this internal assessment is on anaerobic respiration of yeast due to the limited supply of oxygen in the environment that the experiment was carried out in. When exploring the details of anaerobic respiration, glycolysis is determined to be a step that both aerobic and anaerobic respiration share, and it itself can be split up ito 3 steps\parencite{ref}.
+However, the focus of this internal assessment is on anaerobic respiration of yeast due to the limited supply of oxygen in the environment that the experiment was carried out in. When exploring the details of anaerobic respiration, glycolysis is determined to be a step that both aerobic and anaerobic respiration share, and it itself can be split up ito 3 steps\parencite{biochem}.
 
 \newpage
 
@@ -104,7 +104,7 @@ The third and final step of glycolysis converts the DHAP to pyruvate, another th
     \label{fig:figure3}
 \end{figure}
 
-Like glucose, GAP goes through another series of reactions catalyzed by multiple enzymes that eventually turn it into Pyruvate. During one step of the process, a molecule called \ce{NAD+} (nicotinamide adenine dinucleotide, a coenzyme found in the cell that is crucial to metabolic processes) \parencite{ref} gets reduced to NADH while GAP is simultaneously oxidized. The phosphate groups that were taken from ATP in the first step is combined with ADP twice to form \ce{2ATP}. Since the DHAP got converted into GAP in the previous step, 4 total ATP is formed \parencite{ref}. Thus, the net equation for the formation of pyruvate is thus given by:
+Like glucose, GAP goes through another series of reactions catalyzed by multiple enzymes that eventually turn it into Pyruvate. During one step of the process, a molecule called \ce{NAD+} (nicotinamide adenine dinucleotide, a coenzyme found in the cell that is crucial to metabolic processes) \parencite{nad-importance} gets reduced to NADH while GAP is simultaneously oxidized. The phosphate groups that were taken from ATP in the first step is combined with ADP twice to form \ce{2ATP}. Since the DHAP got converted into GAP in the previous step, 4 total ATP is formed \parencite{biochem}. Thus, the net equation for the formation of pyruvate is thus given by:
 \begin{equation}
     \ce{Glucose + 2HPO_{4}^{2-} + 2ADP + 2NAD+ -> 2Pyruvate + 2ATP + 2 NADH + 2H+ + 2H2O}
 \end{equation}
@@ -153,7 +153,7 @@ Given the following chemical reaction denoting alcoholic fermentation:
 \begin{equation}
     \ce{A -> 2B + 2C}
 \end{equation}
-Studying the kinetics of this reaction is useful for predicting its behvaiour. Kinetics in chemistry refers to the study of rates of chemical reactions, which is a measurement of the change in concentration of products and reactants over a period of time \parencite{ref}.
+Studying the kinetics of this reaction is useful for predicting its behvaiour. Kinetics in chemistry refers to the study of rates of chemical reactions, which is a measurement of the change in concentration of products and reactants over a period of time.
 
 \medskip
 
@@ -166,14 +166,14 @@ Additionally, the rate law states how the reaction velocity will be directly pro
 \begin{equation}
     V = k[A]^m
 \end{equation}
-Where $k$ is is the rate constant and the sum of the powers denote the order of the reaction. In the case of alcoholic fermentation, the order is purely dependent on $m$ \parencite{ref}.
+Where $k$ is is the rate constant and the sum of the powers denote the order of the reaction. In the case of alcoholic fermentation, the order is purely dependent on $m$.
 
 \medskip
 
 If the order of the reaction is 0, the rate of reaction will not be dependent on the concentration of the reactants, that is $V = k[A]^0 = k$. If the order of the reaction is 1, the rate of reaction will be proportional to the concentration of the reactants, that is $V = k[A]^1 = k[A]$.
 
 \subsection{Michaelis Menten Enzyme Kinetics}
-When reactions are enzyme-catalyzed, enzyme kinetics may also be used to predicting the behvaiour of the reaction. The Michaelis Menten model, proposed by Leonor Michaelis and Maud Menten in 1913 is concerned with the relationship between initial reaction velocity $V_0$ (rate of enzyme catalysis), and the substrate concentration \parencite{ref}:
+When reactions are enzyme-catalyzed, enzyme kinetics may also be used to predicting the behvaiour of the reaction. The Michaelis Menten model, proposed by Leonor Michaelis and Maud Menten in 1913 is concerned with the relationship between initial reaction velocity $V_0$ (rate of enzyme catalysis), and the substrate concentration \parencite{biochem}:
 \begin{equation}
     \ce{E + S <=>[k_1][k_{-1}] ES ->[k_2] E + P}
 \end{equation}
@@ -290,7 +290,7 @@ Before starting the lab, physical, environmental, and ethical safety issues must
     \hline
     Wiring and electronics & Baggy clothing should not be worn to avoid the risk of accidentally tangling with wires. If not used in an experiment, chemicals should be kept far away from electronics.\\
     \hline
-    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted \parencite{ref}. Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well. \parencite{ref}\\
+    Dumping products down the drain & Yeast should not be dumped down the drain unless it is dissolved and heavily diluted \parencite{baking-yeast-dispose}. Similarly, dumping concentrated ethanol is hazardous unless heavily diluted as well. \parencite{sewer-disposal}\\
     \hline
     Wasting yeast & Yeast used in this experiment is also used in baking, and wasting it could be an ethical concern. Any unused yeast that has not been contaminated with a scoopula should be returned.\\
     \hline
@@ -335,6 +335,8 @@ The following table lists out all dependent, independent, and control variables 
     \hline
 \end{tabularx}
 \end{table}
+
+\newpage
 
 \subsection{Apparatus and Experimental Setup}
 The following materials were used in my experiment:
@@ -421,7 +423,7 @@ The following table displays qualitative observations that were observed for dif
 \end{tabularx}
 \end{table}
 
-A sample calculation for the concentration uncertainty using the basic method is provided below for mass 0.5\,\si{g}. The molar mass of glucose is taken to be 180.18\,\si{g.mol^{-1}} \parencite{ref}:
+A sample calculation for the concentration uncertainty using the basic method is provided below for mass 0.5\,\si{g}. The molar mass of glucose is taken to be 180.18\,\si{g.mol^{-1}} \parencite{data-booklet}:
 \begin{align*}
     c &= \frac{n}{v} = \frac{m/M}{v} \\
     &= \frac{0.5/180.18}{0.1} = 0.02775\,\si{M} \\  %% TODO better equations
@@ -471,13 +473,43 @@ With the processed data in tablex, reaction velocity can be plotted against gluc
     \centering
     \includegraphics{figures/graph_03.png}
     \vspace*{-12pt}
-    \caption{MM graph}
+    \caption{The Michaelis Menten model derived from a curve of best fit plotted against experimental values}
     \label{fig:graph3}
 \end{figure}
 
 \section{Analysis}
+Firstly, all concentration-time graphs were normalized such that the carbon dioxide concentration reading at $t=0$ is 0, making interpreting them easier. This is because the initial concentration reading in the room is the same for all trials, and this experiment is more concerned with reaction velocity (slope) rather than the final \ce{CO2} concentration.
+
+\medskip
+
+For the most part, all concentration-time graphs followed a linear trend for the first 10 minutes of the reaction. This implies a zero order reaction, meaning at this stage, the initial reaction velocity is independent of the glucose concentration. However, none of the graphs exhibited the end behaviour as the reaction approaches equilibrium, because it was only allowed to react for 10 minutes. Thus, the fermentation process of yeast was a slower reaction than proposed in the hypothesis.
+
+\medskip
+
+The processed data in Graph (3) somewhat fit the general trend of the Michaelis Menten model. The theoretical curve fitted to the data is valid because it crosses through all the vertical error bars. From the calculated values of $V_{max}$ and $K_m$, several conclusions can be made about the fermentation process of yeast. A very low value of $K_m$ suggests that enzymes have a very high affinity for the substrate \parencite{biochem}, and which makes sense because according to Equation (15), a small $K_m$ implies a large denominator, meaning the concentration of enzyme substrate complex is significantly larger.
+
+\medskip
+
+Additionally, the Michaelis Menten model is consistent with the raw data. Starting from around 0.005\,\ce{M}, the initial reaction velocity starts to become independent of the substrate concentration. This is consistent with the concentration-time graphs because they start off as 0 order reaction, and their initial reaction velocity seems to reside in the range where the Michaelis Menten curve starts to become asymptotic. Theoretically, the fermentation could start off as a first order reaction if the glucose concentration was small enough, since the initial reaction velocity increases linearly with changes of concentration about the origin.
 
 \section{Evaluation}
+The largest potential source of error was deduced to be the temperature of the water, because it was difficult to keep constant, especially in between trials when the warm water bath was refilled. The temperature reading on the magnetic stirring hotplate wasn't the same as the water, meaning it was adjusted a few times, leaving room for a range of solution temperatures, which increases or decreases the rate at which carbon dioxide gas was produced, if the temperature was higher or lower, respectively.
+
+\medskip
+
+Observing the Michaelis Menten plot, the reaction velocity should increase as substrate concentration increases, not decrease, as observed with the plotted data. This implies that the reaction velocity should have been higher when it was not. The two major assumed reasons for this major discrepancy are listed as follows.
+
+\medskip
+
+First of all, adding yeast and glucose to the bottle when the insides are wet causes some of the substances to stick to the sides. Although the bottle was swirled with water after this happened, it's likely that not all the yeast ended up reacting to all the glucose. Secondly, the time between experiments could have been too short. Usually the first experiment of the day yields the most accurate results, but it's possible that not enough time was given carbon dioxide in the \ce{CO2} gas sensor to completely diffuse out, decreasing the effectiveness in the instrument.
+
+\medskip
+
+Additionally, escaping carbon dioxide could also be a contributing factor, but it should have a very minute impact because the bottle was sealed off by an airtight rubber portion of the \ce{CO2} gas sensor.
+
+\medskip
+
+These skewed results may also reflect the raw data obtained from the plotted concentration-time graphs. For example, the reaction velocity in Graph (b) from Appendix 2 seems to change at about 350 seconds. This sudden change in slope is believed to be incoherent stirring, since the dent at the bottom of the Nalgene bottle makes it hard for the stir bar to reach every corner of the bottle. Lastly, Graph (d) from both Appendix 2 and 3, which both happen to come from a solution with 1\,\si{g} of glucose added, seems to vaguely emulate the behavior of a first order reaction. A potential explanation for this could be the time it takes for a larger amount of glucose to dissolve, giving an underestimate for the initial reaction velocity. Unsurprisingly, these three graphs also have the smallest $R^2$ values with regards to their lines of best fit.
 
 \section{Suggestions for Future Study}
 Throughout all of my trials, the reaction was stopped before reaching equilibrium, so the end behaviour of the reaction could not be studied. By giving the yeast more time for fermentation and potentially collecting the produced carbon dioxide gas through water displacement methods could allow for further analysis on theoretical and actual yield.
