--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,5 @@
 @article{what-is-yeast,
-    title = {What is Yeast?},
+    title = {{What is Yeast?}},
     year = 2019,
     url = {https://www.singerinstruments.com/resource/what-is-yeast/},
     urldate = {2022-03},
@@ -8,30 +8,72 @@
 
 @article{britannica,
     author = {{The Editors of Encyclopaedia Britannica}},
-    title = {yeast},
+    title = {{yeast}},
     url = {https://www.britannica.com/science/yeast-fungus},
+    urldate = {2022-03}
+}
+
+@article{know-your-yeast,
+    year = 2016,
+    title = {KNOW YOUR YEAST},
+    author = {Evelyn Sherdon},
+    url = {https://www.bakefromscratch.com/know-your-yeast},
     urldate = {2022-03}
 }
 
 @article{masterclass,
     author = {Apollonia Poilane},
-    title = {How to Activate Yeast {:} When Is it Necessary to Activate Yeast{?}},
+    title = {{How to Activate Yeast : When Is it Necessary to Activate Yeast?}},
     url = {https://www.masterclass.com/articles/how-to-activate-yeast-explained#how-to-activate-yeast},
     urldate = {2022-03},
-    year = {2021}
+    year = 2021
 }
 
 @article{everyday-dishes,
-    year = {2018},
+    year = 2018,
     author = {Cheryl Najafi},
     url = {https://everydaydishes.com/simple-food-recipes/how-to-activate-dry-yeast-video/},
     urldate = {2022-03},
-    title = {How to Activate Dry Yeast}
+    title = {{How to Activate Dry Yeast}}
 }
 
-@misc{ref,
-    author = {Author},
-    title  = {Title},
-    url    = {https://www.google.com/},
-    year   = 1987
+@article{aerobic-respiration,
+    author = {Katy McLaughlin},
+    year = 2020,
+    title = {{Aerobic Respiration}},
+    urldate = {2022-03},
+    url = {https://biologydictionary.net/aerobic-respiration/}
+}
+
+@article{nad-importance,
+    url = {https://www.elysiumhealth.com/blogs/science101/what-is-nad-and-why-is-it-important},
+    title = {{What is NAD+ and Why Is it Important?}},
+    urldate = {2022-03},
+}
+
+@article{sewer-disposal,
+    title = {{Sewer Disposal: What Can Go Down the Drain?}},
+    url = {https://blink.ucsd.edu/safety/research-lab/hazardous-waste/disposal-guidance/sewer.html},
+    urldate = {2022-03},
+    year = 2021
+}
+
+@article{baking-yeast-dispose,
+    title = {{How do you dispose of baking yeast?}},
+    url = {https://cementanswers.com/how-do-you-dispose-of-baking-yeast/},
+    urldate = {2022-03},
+    author = {Jonathan Holmes}
+}
+
+@book{biochem,
+    author = {Jeremy M. Berg and John L. Tymoczko and Lubert Stryer},
+    publisher = {{W. H. Freeman and Company}},
+    title = {{Biochemistry SIXTH EDITION}},
+    year = {2006}
+}
+
+@bool{data-booklet,
+    publisher = {{International Baccalaureate Organization}},
+    title = {{Chemistry data booklet}},
+    year = {2014}
 }
